--- a/trunk/tp3/informe/Comparaciones.tex
+++ b/trunk/tp3/informe/Comparaciones.tex
@@ -94,8 +94,7 @@ Comparacion por tiempo con p hasta 100 y n=200
 \end{center}
 
 En cuanto a la relación cantidad de nodos, vemos como GRASP tarda mucho más que el resto de los algoritmos 
-y esto es debido a la complejidad, la que queda bien evidenciada en el primer gráfico. A mayor costo, mejores resultados.
-
+y esto es debido a la complejidad, la que queda bien evidenciada en el primer gráfico. A mayor costo, mejores resultados.\\
 De los gráficos recién mencionados, podemos extraer que a mayor densidad, el algoritmo tarda menos.
 Esto tiene sentido porque es más probable que la cardinalidad del conjunto dominante sea uno, o que sea muy chico.
 De esta forma, el Greedy seleccionará el de mayor grado, que será muy cercano a n-1 y además habrá varios con este grado, y en pocas iteraciones
