--- a/tp3/informe/Desarrollo5.tex
+++ b/tp3/informe/Desarrollo5.tex
@@ -135,7 +135,7 @@ A continuación se agrega un gráfico con los tiempos de corrida para distintos 
 Flia de grafo Triangulos Unidos perteneciente al mejor caso con n=12, n=60, n=168, n=252 con $<$ 25
 \end{center}
 
-Como se puede ver, mantenemos la cota mencionada. Las pequeñas diferencias que hacen que no sea completamente paralela, se deben a lo mencionado en el párrafo anterior, ya que estámos trabajando con un grafo random.
+Como se puede ver, mantenemos la cota mencionada. Las pequeñas diferencias que hacen que no sea completamente paralela, se deben a lo mencionado en el párrafo anterior, ya que estámos trabajando con un grafo random. Sin embargo, es interesante ver que aunque pertenezca a O($n^4$), no es despreciable ni el k ni el hecho de que dentro del ciclo realice una ejecución de GREEDY $\in$ O($n^3$)
 
 
 
