--- a/tp3/informe/Comparaciones.tex
+++ b/tp3/informe/Comparaciones.tex
@@ -108,7 +108,7 @@ determinada cantidad de iteraciones en las que ejecuta, en cada una, el greedy y
 
 \begin{center}
 \includegraphics[width=17cm]{./graficos/comparacion_heuristicas_cd.png}\\
-Comparacion por cantidad de nodos con cota de GRID$^[3]$
+Comparacion por cantidad de nodos con cota de GRID$^{[3]}$
 %LISTO
 \end{center}
 
