--- a/trunk/tp3/informe/Comparaciones.tex
+++ b/trunk/tp3/informe/Comparaciones.tex
@@ -117,19 +117,13 @@ podemos asegurar que el resto de las heurísticas se alejan de igual manera de l
 
 
 \section{Conclusiones}
-Heurísticas descentes. Exacto no es factible para n no muy grandes
-Tenemos 3 heurísitcas, pero que a mayor complejidad, mejores resultados
-GRASP no necesita muchas iteraciones
-
-
+Para finalizar, quremos concluir que si bien las heurísticas no poseen siempre el resultado óptimo
+suelen acercarse bastante, y si sabemos información sobre nuestro grafo podemos anticipar resultados 
+o titempos. Esto es necesario ya que el exactó probó no ser factible para n no muy grandes.
 Finalmente, para uso práctico podemos recomendar utilizar el algoritmo de búsqueda local por sobre el greedy para obtener
 una solución razonablemente buena en poco tiempo, ya que la puede mejorar con un costo adicional bastante bajo. Para problemas
-en los que se necesite mayor precisión, se puede aplicar GRASP variando los parámetros dependiendo del tiempo disponible y
+en los que se necesite mayor precisión, se puede aplicar GRASP variando el parámetro k y
 teniendo en cuenta lo mencionado anteriormente.
-
-
-
-
 
 
 
