Cambio en el desarrollo 4

--- a/tp3/informe/Desarrollo4.tex
+++ b/tp3/informe/Desarrollo4.tex
@@ -79,7 +79,7 @@ A continuación, mostramos el pseudocódigo de nuestra algoritmo:  \\
 \subsection{Análisis de Complejidad}
 Para todos los casos, se corre al menos k veces, y para cada una de esas k corridas, se utilizan 3 métodos para intentar hallar una nueva solucion:
 \begin{description}
-\item[2x1:] Se crea una cola de nodos, ordenados por una funcion f (pasada por parametro). Para ello, se recorren todos los posibles pares de nodos dominantes, y para cada par, se analiza si es posible reemplazarlo por un nodo del conjunto dominado, verificando que el conjunto resultante también sea dominado. La complejidad de crear esta cola y hacer éstas verificaciones es de $O(n^4)$, siendo n la cantidad de nodos del grafo. Ésta complejidad se obtiene ya que se recorren los n nodos del grafo para ver todos los pares, y se analiza contra a lo sumo n nodos no dominantes, y se verifica si el conjunto obtenido luego de éste cambio sigue siendo dominante.
+\item[2x1:] Se crea una cola de nodos, ordenados por una funcion f (pasada por parametro). Para ello, se recorren todos los posibles pares de nodos dominantes, y para cada par, se analiza si es posible reemplazarlo por un nodo del conjunto dominado, verificando que el conjunto resultante también sea dominado. La complejidad de crear esta cola y hacer éstas verificaciones es de $O(n^4)$, siendo n la cantidad de nodos del grafo. Ésta complejidad se obtiene ya que, para cada nodo del conjunto dominante (que pueden ser hasta n), se lo agrupa contra los otros nodos del conjunto dominante (a lo sumo n-1), y para cada uno de éstos pares, se le pregunta si se lo pude cambiar con alguno de los (a lo sumo), n nodos dominandos, y que nuestro conjunto siga siendo dominante. Crear los pares de vertices es $O(n^2)$, y para cada una de esas operaciones, se lo compara a lo sumo contra n vértices dominados y se le pregunta si ese cambio hace que nuestro conjunto siga siendo dominante. La complejidad de ésto es también de $O(n^2)$, y se realiza para todos los pares de vértices, por lo que la complejidad final de ésta estrategia es de $(n^4)$.
 \item[QuitarUno:] en éste caso, se recorren todos los nodos del conjunto dominante, y se pregunta si, quitando el nodo en cuestion, el conjunto continúa siendo dominante. Ésta método tiene una complejidad de $O(n^2)$, donde n es la cantidad de nodos del grafo, ya que a lo sumo se recorrerán n nodos, y se lo sacará del conjunto dominante y preguntará si el conjunto sigue siendo dominante (que nos cuesta $O(n)$).
  \item[UnOxUnO] ésta estrategia requiere de recorrer todos los vértices dominantes, y para cada uno de ellos, compararlo con todos los vértices dominados, y fijarme si puedo intercambiar éstos nodos (en cuestión, si tienen los mismos vecinos) de forma tal que el conjunto continue siendo dominante. Esta verificación, en el peor de los casos, tiene una complejidad $O(n^2)$, donde n es la cantidad de nodos del grafo.
 \end{description}
@@ -87,7 +87,8 @@ Para todos los casos, se corre al menos k veces, y para cada una de esas k corri
  Es decir, que la complejidad en todos los casos, no es mayor a $O(n^4)$, ya que en todos los casos se analiza primero la opción de hacer el 2x1. Si puede, la complejidad será esa, y si no puede, seguirá con los otros métodos que, a rasgos generales, nunca superan ésta cota de $O(n^2)$. Por lo que la complejidad general del algoritmo es de \textbf{$O(n^4)$}.
  
  \subsection{Elección de la función a utilizar}
- Una vez analizada la complejidad, nos prestamos a decidir cual de las funciones creadas para ordernar los nodos en la cola de prioridad utilizada para la estrategia 2x1. Para ello, utilizamos como solución inicial los conjuntos dominantes que nos provee el algoritmo greedy analizado en la sección anterior. Corrimos el algoritmo para 500 nodos, para el greedy y luego, a partir de esa solución, corrimos la búsqueda local. \\
+Como comentamos en la sección que hablamos acerca de la solución, cuando creamos los posibles nodos a quitar con la estrategia 2x1, es posible que tengamos una lista de varios candidatos. Y la pregunta que se nos formuló fue: ¿cuál de ellos deberíamos sacar, y por qué? Para ello, creimos conveniente ordenar de alguna forma conveniente todos estos pares de nodos con sus respectivos reemplazantes. Para ello, creamos 3 funciones que ordenan éstas tuplas de nodos, cada una con una idea diferente para intentear ver si alguna de éstas formas de ordenamiento presentaba una mejoría importante respecto a las otras. \\
+Por tanto, una vez analizada la complejidad, nos prestamos a decidir cual de las funciones creadas para ordernar los nodos en la cola de prioridad utilizada para la estrategia 2x1. Para ello, utilizamos como solución inicial los conjuntos dominantes que nos provee el algoritmo greedy analizado en la sección anterior. Corrimos el algoritmo para 500 nodos, para el greedy y luego, a partir de esa solución, corrimos la búsqueda local. \\
 Las funciones creadas para la ocasión son 3, y funciona de la siguiente manera: 
 \begin{description}
 \item[Diferencia de Grados entre el vertice insertado y los reemplazados:] es la suma de los grados de los dos vértices a reemplazar menos el grado del vértice a insertar.
@@ -118,9 +119,10 @@ En primer lugar, le dimos comos solución inicial (es decir, como conjunto domin
 \subsection{Tests y análisis}
 En primer lugar, y para tener acotar siempre la complejidad para el peor caso, en todos los gráficos que presentemos en ésta sección utilizaremos grafos de la familia de Mobius, por lo expuesto en la sección anterior respecto a su complejidad para el algoritmo de búsqueda local. Además, como comentamos también anteriormente, para ordenar los posibles nodos candidatos, utilizaremos la función de comparación \textbf{DiffGrados}.
 Una vez establecida qué función deberíamos utilizar para el 2x1, nos abocamos a testear el método de búsqueda local de acuerdo a la cantidad de nodos del grafo y el tiempo que le consume encontrar una solución. Vale aclarar que no tomamos en consideración el tiempo que nos consume encontrar una solución para darle a la búsqueda local, ya que consideramos que ello no es parte de nuestro algoritmo. De ésta forma, podemos ver que nuestro algoritmo se comporta de forma polinómica en función del tiempo, como lo analizamos en la sección de complejidad. Es decir, mientras mayor cantidad de nodos tenga la solución que nos proveen, y más relacionados estén entre sí dichos nodos (es decir, a través de aristas hacia nodos del mismo conjunto o del conjunto de los dominados), mayor tiempo requerirá calcular nuestra solución. \\
-El siguiente gráfico tiene como función mostrar la complejidad de nuestro algoritmo, que como dijimos tiene una complejidad de $O(n^4)$. El mismo muestra el tiempo que le toma a nuestro algoritmo encontrar la solucion, para grafos que parten desde 2 a 500 nodos. Como dijimos anteriormente, utilizamos grafos de la familia de Mobius. Además, se incluye en el gráfico la función $(0.95x^4)$, para mostrar que, aproximadamente, nuestro algoritmo se comporta de ésta manera.  \\
+El siguiente gráfico tiene como función mostrar la complejidad de nuestro algoritmo, que como dijimos tiene una complejidad de $O(n^4)$. El mismo muestra el tiempo que le toma a nuestro algoritmo encontrar la solucion, para grafos que parten desde 2 a 500 nodos. Como dijimos anteriormente, utilizamos grafos de la familia de Mobius. Además, se incluye en el gráfico la función $(1.05x^4)$, para mostrar que, aproximadamente, nuestro algoritmo se comporta de ésta manera.  \\
 \begin{center}
 \includegraphics[width=17cm]{./graficos/complejidadLocal.png}
 \end{center}
 
-Como se puede apreciar, si bien el algoritmo es mucho mejor que el exacto en función de complejidad, tiene un orden de complejidad mayor que el algoritmo greedy. Además, ésto no nos asegura que la solución que encontramos sea la que efectivamente estamos buscando. En las próximas secciones estudiaremos más a fondo las relaciones entre la cantidad de soluciones encontradas y sus complejidades para las distintos algoritmos, para grafos generados al azar. La idea será determinar en qué situaciones conviene aplicar cual o tal técnica, si es que se puede determinar de antemano.
+En el gráfico anterior podemos apreciar como nuestro algoritmo, a lo sumo, se comporta de de la misma forma que la función polinómica contra la que la comparamos. La dispersión de los puntos se debe a que, de acuerdo a la solución que se le pase al algoritmo y a la solución parcial que se esté construyendo, ésto modifica la performance del mismo. Vale la pena destacar que mientras que la estrategia del 2x1 tiene una complejidad de $O(n^4)$, las otras dos tienen una complejidad de $O(n^2)$, de forma tal que una solución que se construya a base de éstas dos últimas estrategias tendrá una complejidad menor a una que lo haga siempre reemplazando nodos por la estrategia del 2x1. Lo interesante entonces, es, analizar cómo crece el tiempo insumido por nuestro algoritmo a medida que se van agregando nodos al grafo, y se puede ver cómo crece de forma similar a la función estudiada. También podemos ver que hay algunos puntos, aislados, que están por arriba de la cota de la función mencionada, pero son sólo algunos pocos y son valores cercanos a la misma, por lo que la función encontrada es la que mejor se acerca al crecimiento de nuestro algoritmo. Cabe recordar que ésta función es una cota superior para los peores casos, por lo que es de esperar, como comentamos antes, que haya punto que una cantidad de nodos $(n)$ tenga valores bastante lejanos a los de la funcion en ese punto, pero lo interesante es mostrar que, a rasgos generales, el tiempo que se toma nuestro algoritmo aumenta de la misma forma que lo hace ésta función.\\
+Por otro lado, como se puede apreciar, si bien el algoritmo es mucho mejor que el exacto en función de complejidad, tiene un orden de complejidad mayor que el algoritmo greedy. Además, ésto no nos asegura que la solución que encontramos sea la que efectivamente estamos buscando. En las próximas secciones estudiaremos más a fondo las relaciones entre la cantidad de soluciones encontradas y sus complejidades para las distintos algoritmos, para grafos generados al azar. La idea será determinar en qué situaciones conviene aplicar cual o tal técnica, si es que se puede determinar de antemano.
