--- a/trunk/tp3/informe/Desarrollo3.tex
+++ b/trunk/tp3/informe/Desarrollo3.tex
@@ -99,7 +99,7 @@ La solución óptima proporcionada por el algoritmo exacto es {2,4}, mientras qu
 Las familias de grafos que encontramos que el algoritmo goloso da un resultado no optimo frente al exacto fue con los Möbius–Kantor y Grid. Esto suele pasar por que son regulares (3-regular) y casi regulares (4-regular internamente, 3-regular en los bordes) respectivamente y al momento de la elección del mejor vértice, la estrategia solo distingue por grado de adyacentes sin dominar por lo tanto seleccionará por el orden de la etiqueta de los nodos, las cuales son arbitrarias. 
 
 \begin {center}
-\includegraphics{./graficos/mobiusygrid.png}
+\includegraphics{./graficos/mobusygrid.png}
 % grafico.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=50 50 410 302
 \end {center} 
 
